[gd_scene load_steps=24 format=2]

[ext_resource path="res://Components/Tilesets/Forest/Forest.tscn" type="PackedScene" id=1]
[ext_resource path="res://Temp/TheSerpent/Puzzles/Puzzle.gd" type="Script" id=2]
[ext_resource path="res://GameObjects/Tiles/LeverTile/LeverTile.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameObjects/Tiles/OperationalTile/OperationalTile.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameObjects/Tiles/ScannerTile/ScannerTile.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameObjects/Blocks/PhantomBlocks/PhantomBlock.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameObjects/Blocks/ValueBlocks/PushableBlocks.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameObjects/Tiles/TempleTile/Temple.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameObjects/Character/Player/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Temp/TheSerpent/Power/Venom.tscn" type="PackedScene" id=10]
[ext_resource path="res://Temp/TheSerpent/SerpentCharacter/Serpent.tscn" type="PackedScene" id=11]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal3.png" type="Texture" id=12]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal1.png" type="Texture" id=13]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal8.png" type="Texture" id=14]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal6.png" type="Texture" id=15]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal10.png" type="Texture" id=16]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal2.png" type="Texture" id=17]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal7.png" type="Texture" id=18]
[ext_resource path="res://Temp/TheSerpent/Texture/!Door2.png" type="Texture" id=19]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal4.png" type="Texture" id=20]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal9.png" type="Texture" id=21]
[ext_resource path="res://Temp/TheSerpent/Texture/Boss/Crystal5.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 16 ) ],
"loop": true,
"name": "Crystal",
"speed": 10.0
} ]

[node name="3" type="Node2D"]
script = ExtResource( 2 )
answers = {
0: null,
1: null,
2: null,
3: 15
}
numberOfTraps = 8
spawnWaitTime = 1

[node name="ForestTilemap" parent="." instance=ExtResource( 1 )]

[node name="Background" parent="ForestTilemap" index="0"]
tile_data = PoolIntArray( -524263, 0, 2, -524262, 0, 3, -524261, 0, 3, -524260, 0, 3, -524259, 0, 3, -524258, 0, 3, -524257, 0, 4, -458728, 0, 2, -458727, 0, 65537, -458726, 0, 65539, -458725, 0, 65539, -458724, 0, 65539, -458723, 0, 65539, -458722, 0, 65539, -458721, 0, 65536, -458720, 0, 4, -393193, 0, 2, -393192, 0, 65537, -393191, 0, 65539, -393190, 0, 65539, -393189, 0, 65539, -393188, 0, 65539, -393187, 0, 65539, -393186, 0, 65539, -393185, 0, 65539, -393184, 0, 65536, -393183, 0, 4, -327657, 0, 65538, -327656, 0, 65539, -327655, 0, 65539, -327654, 0, 65539, -327653, 0, 65539, -327652, 0, 65539, -327651, 0, 65539, -327650, 0, 65539, -327649, 0, 65539, -327648, 0, 65539, -327647, 0, 65540, -262122, 0, 2, -262121, 0, 65537, -262120, 0, 65539, -262119, 0, 65539, -262118, 0, 65539, -262117, 0, 65539, -262116, 0, 65539, -262115, 0, 65539, -262114, 0, 65539, -262113, 0, 65539, -262112, 0, 65539, -262111, 0, 65536, -262110, 0, 4, -196586, 0, 65538, -196585, 0, 65539, -196584, 0, 65539, -196583, 0, 65539, -196582, 0, 65539, -196581, 0, 65539, -196580, 0, 65539, -196579, 0, 65539, -196578, 0, 65539, -196577, 0, 65539, -196576, 0, 65539, -196575, 0, 65539, -196574, 0, 65540, -131053, 0, 2, -131052, 0, 3, -131051, 0, 3, -131050, 0, 65537, -131049, 0, 65539, -131048, 0, 65539, -131047, 0, 65539, -131046, 0, 65539, -131045, 0, 65539, -131044, 0, 65539, -131043, 0, 65539, -131042, 0, 65539, -131041, 0, 65539, -131040, 0, 65539, -131039, 0, 65539, -131038, 0, 65536, -131037, 0, 3, -131036, 0, 3, -131035, 0, 4, -65517, 0, 65538, -65516, 0, 65539, -65515, 0, 65539, -65514, 0, 65539, -65513, 0, 65539, -65512, 0, 65539, -65511, 0, 65539, -65510, 0, 65539, -65509, 0, 65539, -65508, 0, 65539, -65507, 0, 65539, -65506, 0, 65539, -65505, 0, 65539, -65504, 0, 65539, -65503, 0, 65539, -65502, 0, 65539, -65501, 0, 65539, -65500, 0, 65539, -65499, 0, 65540, 19, 0, 65538, 20, 0, 65539, 21, 0, 65539, 22, 0, 65539, 23, 0, 65539, 24, 0, 65539, 25, 0, 65539, 26, 0, 65539, 27, 0, 65539, 28, 0, 65539, 29, 0, 65539, 30, 0, 65539, 31, 0, 65539, 32, 0, 65539, 33, 0, 65539, 34, 0, 65539, 35, 0, 65539, 36, 0, 65539, 37, 0, 65540, 65555, 0, 65538, 65556, 0, 65539, 65557, 0, 65539, 65558, 0, 65539, 65559, 0, 65539, 65560, 0, 65539, 65561, 0, 65539, 65562, 0, 65539, 65563, 0, 65539, 65564, 0, 65539, 65565, 0, 65539, 65566, 0, 65539, 65567, 0, 65539, 65568, 0, 65539, 65569, 0, 65539, 65570, 0, 65539, 65571, 0, 65539, 65572, 0, 65539, 65573, 0, 65540, 131091, 0, 65538, 131092, 0, 65539, 131093, 0, 65539, 131094, 0, 65539, 131095, 0, 65539, 131096, 0, 65539, 131097, 0, 65539, 131098, 0, 65539, 131099, 0, 65539, 131100, 0, 65539, 131101, 0, 65539, 131102, 0, 65539, 131103, 0, 65539, 131104, 0, 65539, 131105, 0, 65539, 131106, 0, 65539, 131107, 0, 65539, 131108, 0, 65539, 131109, 0, 65540, 196627, 0, 65538, 196628, 0, 65539, 196629, 0, 65539, 196630, 0, 65539, 196631, 0, 65539, 196632, 0, 65539, 196633, 0, 65539, 196634, 0, 65539, 196635, 0, 65539, 196636, 0, 65539, 196637, 0, 65539, 196638, 0, 65539, 196639, 0, 65539, 196640, 0, 65539, 196641, 0, 65539, 196642, 0, 65539, 196643, 0, 65539, 196644, 0, 65539, 196645, 0, 65540, 262163, 0, 65538, 262164, 0, 65539, 262165, 0, 65539, 262166, 0, 65539, 262167, 0, 65539, 262168, 0, 65539, 262169, 0, 65539, 262170, 0, 65539, 262171, 0, 65539, 262172, 0, 65539, 262173, 0, 65539, 262174, 0, 65539, 262175, 0, 65539, 262176, 0, 65539, 262177, 0, 65539, 262178, 0, 65539, 262179, 0, 65539, 262180, 0, 65539, 262181, 0, 65540, 327699, 0, 65538, 327700, 0, 65539, 327701, 0, 65539, 327702, 0, 65539, 327703, 0, 65539, 327704, 0, 65539, 327705, 0, 65539, 327706, 0, 65539, 327707, 0, 65539, 327708, 0, 65539, 327709, 0, 65539, 327710, 0, 65539, 327711, 0, 65539, 327712, 0, 65539, 327713, 0, 65539, 327714, 0, 65539, 327715, 0, 65539, 327716, 0, 65539, 327717, 0, 65540, 393235, 0, 65538, 393236, 0, 65539, 393237, 0, 65539, 393238, 0, 65539, 393239, 0, 65539, 393240, 0, 65539, 393241, 0, 65539, 393242, 0, 65539, 393243, 0, 65539, 393244, 0, 65539, 393245, 0, 65539, 393246, 0, 65539, 393247, 0, 65539, 393248, 0, 65539, 393249, 0, 65539, 393250, 0, 65539, 393251, 0, 65539, 393252, 0, 65539, 393253, 0, 65540, 458771, 0, 65538, 458772, 0, 65539, 458773, 0, 65539, 458774, 0, 65539, 458775, 0, 65539, 458776, 0, 65539, 458777, 0, 65539, 458778, 0, 65539, 458779, 0, 65539, 458780, 0, 65539, 458781, 0, 65539, 458782, 0, 65539, 458783, 0, 65539, 458784, 0, 65539, 458785, 0, 65539, 458786, 0, 65539, 458787, 0, 65539, 458788, 0, 65539, 458789, 0, 65540, 524307, 0, 65538, 524308, 0, 65539, 524309, 0, 65539, 524310, 0, 65539, 524311, 0, 65539, 524312, 0, 65539, 524313, 0, 65539, 524314, 0, 65539, 524315, 0, 65539, 524316, 0, 65539, 524317, 0, 65539, 524318, 0, 65539, 524319, 0, 65539, 524320, 0, 65539, 524321, 0, 65539, 524322, 0, 65539, 524323, 0, 65539, 524324, 0, 65539, 524325, 0, 65540, 589843, 0, 65538, 589844, 0, 65539, 589845, 0, 65539, 589846, 0, 65539, 589847, 0, 65539, 589848, 0, 65539, 589849, 0, 65539, 589850, 0, 65539, 589851, 0, 65539, 589852, 0, 65539, 589853, 0, 65539, 589854, 0, 65539, 589855, 0, 65539, 589856, 0, 65539, 589857, 0, 65539, 589858, 0, 65539, 589859, 0, 65539, 589860, 0, 65539, 589861, 0, 65540, 655379, 0, 65538, 655380, 0, 65539, 655381, 0, 65539, 655382, 0, 65539, 655383, 0, 65539, 655384, 0, 65539, 655385, 0, 65539, 655386, 0, 65539, 655387, 0, 65539, 655388, 0, 65539, 655389, 0, 65539, 655390, 0, 65539, 655391, 0, 65539, 655392, 0, 65539, 655393, 0, 65539, 655394, 0, 65539, 655395, 0, 65539, 655396, 0, 65539, 655397, 0, 65540, 720915, 0, 131074, 720916, 0, 131075, 720917, 0, 131075, 720918, 0, 131075, 720919, 0, 131075, 720920, 0, 131075, 720921, 0, 131075, 720922, 0, 131075, 720923, 0, 131075, 720924, 0, 131075, 720925, 0, 131075, 720926, 0, 131075, 720927, 0, 131075, 720928, 0, 131075, 720929, 0, 131075, 720930, 0, 131075, 720931, 0, 131075, 720932, 0, 131075, 720933, 0, 131076 )

[node name="Ground" parent="ForestTilemap" index="1"]
tile_data = PoolIntArray( -458726, 0, 0, -458725, 0, 1, -458724, 0, 1, -458723, 0, 1, -458722, 0, 2, -393191, 0, 0, -393190, 0, 65540, -393189, 0, 65537, -393188, 0, 65537, -393187, 0, 65537, -393186, 0, 65539, -393185, 0, 2, -327656, 0, 0, -327655, 0, 65540, -327654, 0, 65537, -327653, 0, 65537, -327652, 0, 65537, -327651, 0, 65537, -327650, 0, 65537, -327649, 0, 65539, -327648, 0, 2, -262120, 0, 65536, -262119, 0, 65537, -262118, 0, 65537, -262117, 0, 65537, -262116, 0, 65537, -262115, 0, 65537, -262114, 0, 65537, -262113, 0, 65537, -262112, 0, 65538, -196584, 0, 65536, -196583, 0, 65537, -196582, 0, 65537, -196581, 0, 65537, -196580, 0, 65537, -196579, 0, 65537, -196578, 0, 65537, -196577, 0, 65537, -196576, 0, 65538, -131048, 0, 65536, -131047, 0, 65537, -131046, 0, 65537, -131045, 0, 65537, -131044, 0, 65537, -131043, 0, 65537, -131042, 0, 65537, -131041, 0, 65537, -131040, 0, 65538, -65512, 0, 65536, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, -65505, 0, 65537, -65504, 0, 65538, 24, 0, 131072, 25, 0, 131073, 26, 0, 131073, 27, 0, 131073, 28, 0, 131073, 29, 0, 131073, 30, 0, 131073, 31, 0, 131073, 32, 0, 131074 )

[node name="Blocks" parent="ForestTilemap" index="2"]
tile_data = PoolIntArray( 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 65557, 0, 0, 65571, 0, 0, 131093, 0, 0, 131107, 0, 0, 196629, 0, 0, 196643, 0, 0, 262165, 0, 0, 262179, 0, 0, 327701, 0, 0, 327715, 0, 0, 393237, 0, 0, 393251, 0, 0, 458773, 0, 0, 458787, 0, 0, 524309, 0, 0, 524323, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0 )

[node name="Box3" parent="." instance=ExtResource( 7 )]
position = Vector2( 552, 40 )
boxValue = 5

[node name="Box5" parent="." instance=ExtResource( 7 )]
position = Vector2( 536, 120 )

[node name="PhantomBlock9" parent="." instance=ExtResource( 6 )]
position = Vector2( 552, 56 )

[node name="LeverTile" parent="." instance=ExtResource( 3 )]
position = Vector2( 360, 120 )

[node name="OperationalTile" parent="." instance=ExtResource( 4 )]
position = Vector2( 552, 120 )
operationalValue = 10

[node name="ScannerTile3" parent="." instance=ExtResource( 5 )]
position = Vector2( 552, 136 )
scannerID = 3

[node name="Temple" parent="." instance=ExtResource( 8 )]
position = Vector2( 360, 24 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 360, 136 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.7, 0.7 )
smoothing_enabled = true
smoothing_speed = 3.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Traps" type="Node2D" parent="."]

[node name="Venom3" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 376, 136 )

[node name="Venom4" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 392, 136 )

[node name="Venom5" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 408, 136 )

[node name="Venom6" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 424, 136 )

[node name="Venom7" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 440, 136 )

[node name="Venom8" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 456, 136 )

[node name="Venom9" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 472, 136 )

[node name="Venom10" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 488, 136 )

[node name="Venom11" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 504, 136 )

[node name="Venom12" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 520, 136 )

[node name="Venom13" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 536, 136 )

[node name="Venom14" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 376, 120 )

[node name="Venom15" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 392, 120 )

[node name="Venom16" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 408, 120 )

[node name="Venom17" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 424, 120 )

[node name="Venom18" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 440, 120 )

[node name="Venom19" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 456, 120 )

[node name="Venom20" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 472, 120 )

[node name="Venom21" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 488, 120 )

[node name="Venom22" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 504, 120 )

[node name="Venom23" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 520, 120 )

[node name="Venom24" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 536, 120 )

[node name="Venom25" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 376, 104 )

[node name="Venom26" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 392, 104 )

[node name="Venom27" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 408, 104 )

[node name="Venom28" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 424, 104 )

[node name="Venom29" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 440, 104 )

[node name="Venom30" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 456, 104 )

[node name="Venom31" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 472, 104 )

[node name="Venom32" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 488, 104 )

[node name="Venom33" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 504, 104 )

[node name="Venom34" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 520, 104 )

[node name="Venom35" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 536, 104 )

[node name="Venom36" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 376, 88 )

[node name="Venom37" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 392, 88 )

[node name="Venom38" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 408, 88 )

[node name="Venom39" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 424, 88 )

[node name="Venom40" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 440, 88 )

[node name="Venom41" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 456, 88 )

[node name="Venom42" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 472, 88 )

[node name="Venom43" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 488, 88 )

[node name="Venom44" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 504, 88 )

[node name="Venom45" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 520, 88 )

[node name="Venom46" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 536, 88 )

[node name="Venom47" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 376, 72 )

[node name="Venom48" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 392, 72 )

[node name="Venom49" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 408, 72 )

[node name="Venom50" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 424, 72 )

[node name="Venom51" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 440, 72 )

[node name="Venom52" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 456, 72 )

[node name="Venom53" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 472, 72 )

[node name="Venom54" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 488, 72 )

[node name="Venom55" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 504, 72 )

[node name="Venom56" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 520, 72 )

[node name="Venom57" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 536, 72 )

[node name="Venom58" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 376, 56 )

[node name="Venom59" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 392, 56 )

[node name="Venom60" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 408, 56 )

[node name="Venom61" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 424, 56 )

[node name="Venom62" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 440, 56 )

[node name="Venom63" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 456, 56 )

[node name="Venom64" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 472, 56 )

[node name="Venom65" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 488, 56 )

[node name="Venom66" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 504, 56 )

[node name="Venom67" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 520, 56 )

[node name="Venom68" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 536, 56 )

[node name="Venom69" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 376, 40 )

[node name="Venom91" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 552, 104 )

[node name="Venom97" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 552, 120 )

[node name="Venom98" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 360, 40 )

[node name="Venom99" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 360, 56 )

[node name="Venom100" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 360, 72 )

[node name="Venom101" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 360, 88 )

[node name="Venom102" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 360, 104 )

[node name="Venom92" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 552, 88 )

[node name="Venom93" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 552, 72 )

[node name="Venom94" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 552, 56 )

[node name="Venom95" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 552, 40 )

[node name="Venom96" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 552, 24 )

[node name="Venom70" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 392, 40 )

[node name="Venom71" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 408, 40 )

[node name="Venom72" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 424, 40 )

[node name="Venom73" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 440, 40 )

[node name="Venom74" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 456, 40 )

[node name="Venom75" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 472, 40 )

[node name="Venom76" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 488, 40 )

[node name="Venom77" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 504, 40 )

[node name="Venom78" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 520, 40 )

[node name="Venom79" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 536, 40 )

[node name="Venom80" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 376, 24 )

[node name="Venom81" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 392, 24 )

[node name="Venom82" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 408, 24 )

[node name="Venom83" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 424, 24 )

[node name="Venom84" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 440, 24 )

[node name="Venom85" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 456, 24 )

[node name="Venom86" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 472, 24 )

[node name="Venom87" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 488, 24 )

[node name="Venom88" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 504, 24 )

[node name="Venom89" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 520, 24 )

[node name="Venom90" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 536, 24 )

[node name="SpawningVenomTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Serpent" parent="." instance=ExtResource( 11 )]
position = Vector2( 456, -48 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Serpent"]
position = Vector2( 0, -24 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Crystal"
frame = 1
playing = true

[node name="Sprite" type="Sprite" parent="Serpent"]
show_behind_parent = true
position = Vector2( 0, -8 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )
hframes = 12
vframes = 8
frame = 54

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawningVenomTimer" to="." method="_on_SpawningVenomTimer_timeout"]

[editable path="ForestTilemap"]
